--- a/main.yml
+++ b/main.yml
@@ -12,9 +12,9 @@
     # all / common
     - name: "group_vars | all"
       vars_files:
-        - group_vars/common/all.yml
-        - group_vars/common/env.yml
-        - group_vars/common/ssh.yml
+        - group_vars/all/all.yml
+        - group_vars/all/env.yml
+        - group_vars/all/ssh.yml
 
     # osx / macos
     - name: "group_vars | osx"
