--- a/pre_tasks/common/main.yml
+++ b/pre_tasks/common/main.yml
@@ -1,69 +1,3 @@
 ---
-# -- SET FACTS -- #
-- name: "set facts based on host users environment variables"
-  ansible.builtin.set_fact:
-    h_user: "{{ ansible_env.USER }}"
-    h_home: "{{ ansible_env.HOME }}"
-    h_xdgconfig: "{{ ansible_env.XDG_CONFIG_HOME | default(ansible_env.HOME + '/.config') }}"
-    h_ssh: "{{ ansible_env.SSH_DIR | default(ansible_env.HOME + '/.ssh') }}"
-  become: false
-
-# get sudo secret path
-- name: "get sudo secret path"
-  ansible.builtin.set_fact:
-    sudo_secret_path: "{{ lookup('env', 'ONEVAULT') | default('/opt/onevault') + '/sudo.secret' }}"
-  become: false
-
-# -- ENSURE SECRET FILES -- #
-# check if sudo secret file exists and is not empty
-- name: "Check if sudo secret file exists and is not empty"
-  stat:
-    path: "{{ sudo_secret_path }}"
-  register: secret_file
-# read & encode sudo secret
-- name: "read & encode sudo secret"
-  slurp:
-    src: "{{ sudo_secret_path }}"
-  register: sudo_secret
-  delegate_to: localhost
-  become: no
-  when: secret_file.stat.exists and secret_file.stat.size > 0
-# decode & store sudo secret
-- name: "decode sudo secret"
-  ansible.builtin.set_fact:
-    ansible_become_pass: "{{ sudo_secret['content'] | b64decode }}" # decode sudo secret
-  when: secret_file.stat.exists and secret_file.stat.size > 0
-
-# -- ENSURE DIRECTORIES -- #
-# /opt/onesetup
-- name: "ensure => /opt/onesetup"
-  ansible.builtin.file:
-    path: "/opt/onesetup"
-    state: directory
-    owner: "{{ ansible_env.USER }}"
-    mode: "0755"
-  become: false
-# /opt/onevault
-- name: "ensure => /opt/onevault"
-  ansible.builtin.file:
-    path: "/opt/onevault"
-    state: directory
-    owner: "{{ ansible_env.USER }}"
-    mode: "0700"
-  become: false
-# $HOME/.config
-- name: "ensure => ~/.config"
-  ansible.builtin.file:
-    path: "{{ ansible_env.XDG_CONFIG_HOME | default(ansible_env.HOME + '/.config') }}"
-    state: directory
-    owner: "{{ ansible_env.USER }}"
-    mode: "0755"
-  become: false
-# $HOME/.ssh
-- name: "ensure => ~/.ssh"
-  ansible.builtin.file:
-    path: "{{ ansible_env.SSH_DIR | default(ansible_env.HOME + '/.ssh') }}"
-    state: directory
-    owner: "{{ ansible_env.USER }}"
-    mode: "0700"
-  become: false
+- name: "debug"
+  ansible.builtin.shell: "echo 'hello world'"
