--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,15 +1,10 @@
 [defaults]
 nocows = true  # disable default cow ascii art
 force_color = true  # forces colors for TTYs without color support
-home = /opt/onesetup
-roles_path = ./roles:/etc/ansible/roles
-inventory = ./inventory.ini  # inventory file to specify hosts
-vault_password_file = /opt/onevault/onesetup.secret
-become_password_file = /opt/onevault/sudo.secret
-
-[privilege_escalation]
-become_user = "root"
-become = true  # enable sudo privilege escalation
+home = "/opt/one/onesetup"
+roles_path = "./roles"
+inventory = "./inventory.ini"
+vault_password_file = "/opt/one/onevault/onesetup.secret"
 
 [colors]
 debug = "purple"
