feat: assign vault_id to encrypted strings + rotate ansible vault password

--- a/group_vars/all/env.yml
+++ b/group_vars/all/env.yml
@@ -1,10 +1,8 @@
 # -- CONSTANT VARIABLES -- #
-ONESETUP: "/opt/onesetup"
-ONEVAULT: "/opt/onevault"
+ONESETUP: "/opt/one/onesetup" # idk if this is used somewhere anymore
+ONEVAULT: "/opt/one/onevault" # idk if this is used somewhere anymore
 
-# -- DYNAMIC VARIABLES (HOST) -- #
+# -- DYNAMIC VARIABLES -- #
 H_XDG_CONFIG_HOME: "{{ ansible_env.XDG_CONFIG_HOME | default(ansible_env.HOME + '/.config/') }}"
 H_HOME: "{{ ansible_env.HOME }}"
 H_USER: "{{ ansible_env.USER }}"
-
-# -- DYNAMIC VARIABLES (CONTROLLER) -- #
